Fix files breadcrumb spacing

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -826,7 +826,7 @@ table.dragshadow td.size {
 	box-sizing: border-box;
 	position: -webkit-sticky;
 	position: sticky;
-	height: 54px;
+	height: 50px; /* height of the nav toggle button; */
 	padding: 0;
 	margin: 0;
 	background-color: var(--color-main-background-translucent);
@@ -837,7 +837,7 @@ table.dragshadow td.size {
 	user-select: none;
 	display: flex;
 	top: 0;
-	padding-top: 3px;
+	padding-left: 50px; /* width of the nav toggle button; */
 
 	.actions {
 		> div,
